--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save Our Nature</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" type="image/x-icon" href="images\logo.jpg">
+    <link rel="icon" type="image/x-icon" href="images/logo.jpg">
 </head>
 <body>
     <header>
-        <img src="images\logo.jpg" alt="Save Our Nature Logo" class="header-logo">
+        <img src="images/logo.jpg" alt="Save Our Nature Logo" class="header-logo">
         <h1>Save Our Nature</h1>
         <p>Protecting Earth's Natural Beauty for Future Generations</p>
     </header>
