--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save Our Nature</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" type="image/x-icon" href="/images/Logo.jpg"">
+    <link rel="icon" type="image/x-icon" href="/savenature_/images/Logo.jpg"">
 </head>
 <body>
     <header>
