--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="/savenature_/images/Logo.jpg" alt="Save Our Nature Logo" class="header-logo">
+        <img src="/savenature_/Logo.jpg" alt="Save Our Nature Logo" class="header-logo">
         <h1>Save Our Nature</h1>
         <p>Protecting Earth's Natural Beauty for Future Generations</p>
     </header>
