--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Save Our Nature</title>
     <link rel="stylesheet" href="stylesheet3.css">
-    <link rel="icon" type="image/x-icon" href="images\logo.jpg">
+    <link rel="icon" type="image/x-icon" href="/savenature_/Logo.jpg">
 </head>
 <body>
     <nav>
