--- a/collect data.html
+++ b/collect data.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet1.css">
     <title>Save Our Nature - Volunteer Registration</title>
-    <link rel="icon" type="image/x-icon" href="images\logo.jpg">
+    <link rel="icon" type="image/x-icon" href="/savenature_/Logo.jpg">
     <style>
         
     </style>
