--- a/action.html
+++ b/action.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Take Action - Save Our Nature</title>
     <link  rel="stylesheet" href="stylesheet4.css">
-    <link rel="icon" type="image/x-icon" href="images\logo.jpg">
+    <link rel="icon" type="image/x-icon" href="/savenature_/Logo.jpg">
 </head>
 <body>
     <nav>
