--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save Our Nature - Protecting Earth's Future</title>
     <link rel="stylesheet" href="stylesheet2.css">
-    <link rel="icon" type="image/x-icon" href="images\logo.jpg">
+    <link rel="icon" type="image/x-icon" href="/savenature_/Logo.jpg">
 </head>
 <body>
     <nav>
