--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <img src="/savenature_/Logo.jpg" alt="Save Our Nature Logo" class="header-logo">
+        <img src="/savenature_/images/Logo.jpg" alt="Save Our Nature Logo" class="header-logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
